# symbrion-morph

./: ProjectHome.md  README  Video.md
RobotTesting/: main.cpp
branches/daemon/ir_dock/: hist.hh  robot.cc  robot.hh
branches/daemon/src/: robot_AW.cc  robot_AW.hh  robot_KIT.cc  robot_KIT.hh  robot_SCOUT.cc
branches/daemon/test/: Makefile  ipc_interface.hh  main.cc
branches/final_demo_1/: README
branches/final_demo_2/: README
data/data_set11/: coverage.asy
data/data_set2/: readme
data/data_set31/: readme
demo_binaries/: aw_option.cfg  morph  rcp2all.sh  rcp2robot.sh  run.sh
demo_binaries/config/: aw_option.cfg.56  aw_option.cfg.61  aw_option.cfg.62  kit_option.cfg.136  rcp_from_all.sh  rcp_from_robot.sh  rcp_to_all.sh  rcp_to_robot.sh  scout_option.cfg.211  scout_option.cfg.224
gui/: Makefile  Makefile.gui  canvas.cc  client.cc  gui.cc  imagebox.cc  imagebox.hh
ir_dock/: robot.cc  robot.hh  robot_AW.cc  robot_SCOUT.cc
ir_dock/example/: main.cc
patch/: Makefile  r4819.patch
script/: lock.sh  run_atwheel_recruiting.sh  unlock.sh
src/: .kermrc  MacProject.vim  Makefile  Project.vim  colors.txt  connectRobot.sh  connect_aw2.sh  connect_aw6.sh  enablePowersharing.sh  killRobot.sh  launchRobots.sh  main.cc  mean_ir_values.py  rcp2all.sh  rcp2robot.sh  robot_AW.cc  robot_AW.hh  robot_KIT.cc  robot_KIT.hh  robot_SCOUT.cc  robot_SCOUT.hh  setip.sh  vi
src/base/: IRMessage.cc  IRMessage.hh  Makefile  Message.h  VisualMemory.cc  VisualMemory.hh  global.cc  global.hh  parameter.cc  parameter.hh  rcp2all.sh  robot.cc  robot.hh  robot_IPC.cc  robot_daemon.cc  robot_debug.cc  robot_ethcomm.cc  robot_ircomm.cc  robot_option.cc  robot_organism.cc  robot_self_repair.cc  robot_vision.cc  vision_def.h
src/config/: KIT4-aw2_option.cfg  aw_option.cfg.52  aw_option.cfg.56  aw_option.cfg.61  aw_option.cfg.69  aw_option.cfg.72  kit_option.cfg.134  kit_option.cfg.136  kit_option.cfg.155  rcp_from_all.sh  rcp_from_robot.sh  rcp_to_all.sh  scout_option.cfg.200  scout_option.cfg.211  scout_option.cfg.216  scout_option.cfg.220  scout_option.cfg.224
test/: Makefile  ipc_interface.hh  main.cc  main.cpp
trunk/gui/: Makefile.gui  colors.txt  gui.cc  imagebox.cc  imagebox.hh
trunk/ir_dock/: Makefile  robot.cc  robot.hh  robot_KIT.cc  robot_SCOUT.cc
trunk/script/: mspreset.sh  run_atwheel_docking.sh  run_kabot.sh
trunk/src/: Makefile  Project.vim  colors.txt  main.cc  robot_AW.cc  robot_AW.hh  robot_KIT.cc  robot_KIT.hh  robot_SCOUT.cc  robot_SCOUT.hh
trunk/trunk/: README
trunk/trunk/src/base/og/: CMakeLists.txt
wiki/: Video.wiki
(+1211 files in other folders)
